# IAUSB

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  COPYING  README.md
.github/workflows/: ci.yaml
cmake/: find_deps.cmake
include/iausb/: definitions.hpp  iausb.hpp
src/: CMakeLists.txt
src/cpp/: connection.cpp  context.cpp  device.cpp  iausb.cpp
src/hpp/: iausb_connection.hpp  iausb_context.hpp  iausb_device.hpp
tests/: CMakeLists.txt
tests/cpp/: iausb_test.cpp  main.cpp  sample_test.cpp
